# CollectibleCardGame

./: .gitignore  .gitmodules  CMakeLists.txt  CardInfo.h  LICENSE  README.md  StateManager.cpp  StateManager.h  main.cpp
GameObjects/: BoardCard.cpp  BoardCard.h  HandCard.cpp  HandCard.h
Scenes/: GameFieldScene.cpp  GameFieldScene.h
